# no-space-left-macos

./: .gitignore  Cargo.toml  README.md
assets/: icon.icns
crates/disk-app/: Cargo.toml
crates/disk-app/src/: actions.rs  app.rs  format.rs  main.rs  theme.rs  treemap.rs
crates/disk-core/: Cargo.toml
crates/disk-core/src/: delete.rs  diff.rs  lib.rs  model.rs  scanner.rs  snapshot.rs
docs/superpowers/specs/: 2026-05-29-disk-space-organizer-design.md
