[package]
name = "disk-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Disk Space Organizer — minimal macOS app for finding what fills your disk."

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
disk-core = { path = "../disk-core" }
eframe = "0.30.0"
rfd = "0.17.2"
