[package]
name = "disk-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "no space left — minimal macOS app for finding what fills your disk."

[[bin]]
name = "no-space-left"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
dirs = "6.0.0"
disk-core = { path = "../disk-core" }
eframe = "0.30.0"
rfd = "0.17.2"

# `cargo install cargo-bundle` then `cargo bundle --release` builds a .app.
[package.metadata.bundle]
name = "no space left"
identifier = "com.nospaceleft.app"
short_description = "See what's filling your disk."
category = "public.app-category.utilities"
icon = ["../../assets/icon.icns"]
