[package]
name = "disk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Engine for Disk Space Organizer: scanning, snapshots, diffing, safe deletion."

[lints]
workspace = true

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
trash = "5.2.3"

[dev-dependencies]
tempfile = "3.27.0"
