[package]
name = "disk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Engine for no space left: scanning, snapshots, diffing, safe deletion."

[lints]
workspace = true

[dependencies]
bincode = "1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
trash = "5.2.3"

[dev-dependencies]
tempfile = "3.27.0"
